cluster/apps/vpn-test/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-test
  labels:
    routed-gateway: "true"
