cluster/apps/vpn-test/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terminal-test
  labels:
    app: terminal-test
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terminal-test
  template:
    metadata:
      labels:
        app: terminal-test
      annotations:
        setGateway: "true"
    spec:
      containers:
        - name: alpine
          image: alpine
          command:
            - /bin/sh
            - -c
            - while true; do
              sleep 600 &
              wait $!;
              done
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "30m"
              memory: "30Mi"
